# MyESL2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  deps.env
.github/workflows/: ci-dev.yml  ci.yml  release-dev.yml  release.yml
Fungi_data/: A_B_Hyp.txt  Fungi_T1_with_ID.nwk  aln.txt  aln_200.txt  aln_200_linux.txt  aln_200_overlapping.txt  aln_5.txt  clade_X1.txt  clade_multiple.txt  tree.nwk
Fungi_data/aln/: BUSCOfEOG7008JB.domain.aa.aln.trimmed.fasta  BUSCOfEOG7008JM.domain.aa.aln.trimmed.fasta  BUSCOfEOG7008JT.domain.aa.aln.trimmed.fasta  BUSCOfEOG7008K9.domain.aa.aln.trimmed.fasta  BUSCOfEOG7034RG.domain.aa.aln.trimmed.fasta  BUSCOfEOG7034SB.domain.aa.aln.trimmed.fasta  BUSCOfEOG7034SQ.domain.aa.aln.trimmed.fasta  BUSCOfEOG7034T8.domain.aa.aln.trimmed.fasta  BUSCOfEOG7034T9.domain.aa.aln.trimmed.fasta  BUSCOfEOG7034TC.domain.aa.aln.trimmed.fasta  BUSCOfEOG7034TX.domain.aa.aln.trimmed.fasta  BUSCOfEOG706108.domain.aa.aln.trimmed.fasta  BUSCOfEOG70610P.domain.aa.aln.trimmed.fasta  BUSCOfEOG706113.domain.aa.aln.trimmed.fasta  BUSCOfEOG706124.domain.aa.aln.trimmed.fasta  BUSCOfEOG708W9G.domain.aa.aln.trimmed.fasta  BUSCOfEOG708W9T.domain.aa.aln.trimmed.fasta  BUSCOfEOG70CRGF.domain.aa.aln.trimmed.fasta  BUSCOfEOG70CRGK.domain.aa.aln.trimmed.fasta  BUSCOfEOG70CRJQ.domain.aa.aln.trimmed.fasta  BUSCOfEOG70GMQJ.domain.aa.aln.trimmed.fasta  BUSCOfEOG70GMQZ.domain.aa.aln.trimmed.fasta  BUSCOfEOG70KGZ3.domain.aa.aln.trimmed.fasta  BUSCOfEOG70KH0F.domain.aa.aln.trimmed.fasta  BUSCOfEOG70KH0H.domain.aa.aln.trimmed.fasta  BUSCOfEOG70KH18.domain.aa.aln.trimmed.fasta  BUSCOfEOG70KH1C.domain.aa.aln.trimmed.fasta  BUSCOfEOG70PC60.domain.aa.aln.trimmed.fasta  BUSCOfEOG70PC63.domain.aa.aln.trimmed.fasta  BUSCOfEOG70PC6J.domain.aa.aln.trimmed.fasta  BUSCOfEOG70PC6K.domain.aa.aln.trimmed.fasta  BUSCOfEOG70PC6X.domain.aa.aln.trimmed.fasta  BUSCOfEOG70PC7F.domain.aa.aln.trimmed.fasta  BUSCOfEOG70PC83.domain.aa.aln.trimmed.fasta  BUSCOfEOG70PC9D.domain.aa.aln.trimmed.fasta  BUSCOfEOG70S7FC.domain.aa.aln.trimmed.fasta  BUSCOfEOG70S7FW.domain.aa.aln.trimmed.fasta  BUSCOfEOG70W3NS.domain.aa.aln.trimmed.fasta  BUSCOfEOG70W3P6.domain.aa.aln.trimmed.fasta  BUSCOfEOG70W3R5.domain.aa.aln.trimmed.fasta  (+1192 more)
docs/: PFF_FORMAT_SPEC.md
docs/changelog/: v0.2.0.md  v0.2.1.md  v0.2.2.md
include/: ai_gl_logr.hpp  cblas_decl.hpp  encoder.hpp  eppVector.hpp  epph.hpp  fasta_parser.hpp  gl_logisticr_fp32.hpp  gl_logisticr_fp64.hpp  group_penalty.hpp  initFactor.hpp  newick.hpp  numeric_parser.hpp  ol_sg_lasso_fp32.hpp  ol_sg_lasso_fp64.hpp  ol_sg_lasso_leastr_fp32.hpp  ol_sg_lasso_leastr_fp64.hpp  ol_sg_lasso_logisticr_fp32.hpp  ol_sg_lasso_logisticr_fp64.hpp  overlapping.hpp  overlapping_fp32.hpp  overlapping_sg_lasso_leastr.hpp  overlapping_sg_lasso_leastr_fp32.hpp  overlapping_sg_lasso_leastr_fp64.hpp  overlapping_sg_lasso_logisticr.hpp  overlapping_sg_lasso_logisticr_fp32.hpp  overlapping_sg_lasso_logisticr_fp64.hpp  pff_format.hpp  pipeline_adaptive.hpp  pipeline_encode.hpp  pipeline_evaluate.hpp  pipeline_preprocess.hpp  pipeline_psc.hpp  pipeline_train.hpp  pipeline_utils.hpp  pnf_format.hpp  process_log.hpp  regression.hpp  sg_lasso.hpp  sg_lasso_fp32.hpp  sg_lasso_fp64.hpp  (+8 more)
old_src/: overlapping_sg_lasso_leastr_main.cpp  overlapping_sg_lasso_logisticr_main.cpp  sg_lasso_leastr_main.cpp  sg_lasso_main.cpp
reports/: ol_sg_lasso_benchmark.md
scripts/: setup.bat  setup.ps1  setup.sh  setup_deps.sh
src/: encoder.cpp  fasta_parser.cpp  gl_logisticr_fp32.cpp  gl_logisticr_fp64.cpp  main.cpp  newick.cpp  numeric_parser.cpp  ol_sg_lasso_fp32.cpp  ol_sg_lasso_fp64.cpp  ol_sg_lasso_leastr_fp32.cpp  ol_sg_lasso_leastr_fp64.cpp  ol_sg_lasso_logisticr_fp32.cpp  ol_sg_lasso_logisticr_fp64.cpp  overlapping_sg_lasso_leastr.cpp  overlapping_sg_lasso_leastr_fp32.cpp  overlapping_sg_lasso_leastr_fp64.cpp  overlapping_sg_lasso_logisticr.cpp  overlapping_sg_lasso_logisticr_fp32.cpp  overlapping_sg_lasso_logisticr_fp64.cpp  pipeline_adaptive.cpp  pipeline_encode.cpp  pipeline_evaluate.cpp  pipeline_preprocess.cpp  pipeline_psc.cpp  pipeline_train.cpp  regression.cpp  sg_lasso.cpp  sg_lasso_fp32.cpp  sg_lasso_fp64.cpp  sg_lasso_leastr.cpp  sg_lasso_leastr_fp32.cpp  sg_lasso_leastr_fp64.cpp  sg_lasso_logisticr_fp32.cpp  sg_lasso_logisticr_fp64.cpp  visualizer.cpp
test/: compare_gl_logisticr.sh  compare_golden.sh  gl_logisticr_compare.cpp
test/gl_logisticr/: README.md  features.csv  groups.csv  slep_opts.txt
test/golden/: hss_summary.txt
test/golden/Clade_X1/: bss_median.txt  eval.txt  eval_SPS_SPP.txt  eval_gene_predictions.txt  gss_median.txt  pss_median.txt
test/golden/Control/: bss_median.txt  eval.txt  eval_SPS_SPP.txt  eval_gene_predictions.txt  gss_median.txt  pss_median.txt
